--- a/playbook.yaml
+++ b/playbook.yaml
@@ -33,7 +33,7 @@
 
     - name: Parse regions from environment variable
       set_fact:
-        regions_list: "{{ tenant_region | replace('[', '') | replace(']', '') | replace('\"', '') | split(',') }}"
+        regions_list: "{{ tenant_region | replace('[', '') | replace(']', '') | replace('\"', '') | trim | split(',') }}"
     
     - name: Fail if no valid regions are found
       ansible.builtin.fail:
