--- a/playbook.yaml
+++ b/playbook.yaml
@@ -10,14 +10,13 @@
         ibmcloud_api_key: "{{ lookup('env', 'ibmcloud_api_key') }}"
         tenant_region: "{{ lookup('env', 'tenant_region') | default('') }}"
         target_service_name: "logs-router"
+        
     - name: Log in to IBM Cloud
       ansible.builtin.shell: |
         ibmcloud login --apikey "{{ ibmcloud_api_key }}" --no-region -q >/dev/null 2>&1
       register: ibmcloud_login_result
       changed_when: false
-      failed_when: ibmcloud_login_result.rc != 0 or
-                   'FAILED' in ibmcloud_login_result.stderr or
-                   'Error' in ibmcloud_login_result.stderr
+      failed_when: ibmcloud_login_result.rc != 0 or 'FAILED' in ibmcloud_login_result.stderr or 'Error' in ibmcloud_login_result.stderr
 
     - name: Display IBM Cloud login success message
       ansible.builtin.debug:
@@ -33,8 +32,6 @@
 
     - name: Parse regions from environment variable (older Ansible)
       set_fact:
-        # Use regex_replace to convert the comma-separated list into a YAML list,
-        # then use from_yaml to parse it into an actual Ansible list.
         regions_list: "{{ ('[' + tenant_region | replace('[', '') | replace(']', '') | replace('\"', '') + ']') | from_yaml }}"
     
     - name: Fail if no valid regions are found
@@ -57,28 +54,12 @@
         loop_var: item
       ignore_errors: true
       
-    - name: Check and display API results
+    - name: Process and display findings
       ansible.builtin.debug:
-        var: item
-      loop: "{{ api_response.results }}"
-      loop_control:
-        loop_var: item
-    
-    - name: Display message for regions with no tenants
-      ansible.builtin.debug:
-        msg: "No log routing tenants found in region '{{ item.item }}'."
-      when: 
-        - item.status == 200
-        - (item.content | from_json).tenants is defined
-        - (item.content | from_json).tenants | length == 0
-      loop: "{{ api_response.results }}"
-      loop_control:
-        loop_var: item
-
-    - name: Display an error message if the API call failed
-      ansible.builtin.debug:
-        msg: "API call for region '{{ item.item }}' failed. Status code: {{ item.status }}. Error: {{ item.json.error_message | default('Unknown error.') }}"
-      when: item.status != 200
+        msg: |
+          Processing results for region: {{ item.item }}
+          Status: {{ item.status }}
+          Found tenants: {{ (item.json.tenants | length) if item.status == 200 and item.json.tenants is defined else 0 }}
       loop: "{{ api_response.results }}"
       loop_control:
         loop_var: item
