--- a/playbook.yaml
+++ b/playbook.yaml
@@ -53,42 +53,6 @@
         loop_var: item
       ignore_errors: true
       
-    - name: Display log routing tenants found
+    - name: Display ALL API call results for debugging
       ansible.builtin.debug:
-        msg: |
-          Found tenants in {{ item.item }}:
-          {{ item.content | from_json | json_query(query) | to_nice_json }}
-      vars:
-        query: "tenants[?contains(crn, '{{ target_service_name }}') && contains(crn, '{{ item.item }}') && state=='active'].{Name: name, ID: id, Region: '{{ item.item }}', CRN: crn}"
-      when:
-        - item.status == 200
-        - (item.content | from_json).tenants is defined
-        - (item.content | from_json).tenants | length > 0
-      loop: "{{ api_response.results }}"
-      loop_control:
-        loop_var: item
-
-    - name: Display message for regions with no tenants
-      ansible.builtin.debug:
-        msg: "No log routing tenants found in region '{{ item.item }}'."
-      when: 
-        - item.status == 200
-        - (item.content | from_json).tenants is defined
-        - (item.content | from_json).tenants | length == 0
-      loop: "{{ api_response.results }}"
-      loop_control:
-        loop_var: item
-
-    - name: Display an error message if the API call failed
-      ansible.builtin.debug:
-        msg: "API call for region '{{ item.item }}' failed. Status code: {{ item.status }}. Error: {{ item.json.error_message | default('Unknown error.') }}"
-      when: item.status != 200
-      loop: "{{ api_response.results }}"
-      loop_control:
-        loop_var: item
-
-    - name: Log out of IBM Cloud
-      ansible.builtin.shell: |
-        ibmcloud logout >/dev/null 2>&1
-      changed_when: false
-      failed_when: false
+        var: api_response.results
