--- a/playbook.yaml
+++ b/playbook.yaml
@@ -8,6 +8,7 @@
     ibmcloud_api_key: "{{ lookup('env', 'ibmcloud_api_key') }}"
     tenant_region: "{{ lookup('env', 'tenant_region') | default('') }}"
     target_service_name: "logs-router"
+    found_tenants_list: []
 
   tasks:
     - name: Ensure API key and regions are set
@@ -53,33 +54,26 @@
         loop_var: item
       ignore_errors: true
 
-    - name: Set a fact to collect all found tenants
+    - name: Process results and add found tenants to a list
       set_fact:
-        all_found_tenants: >
-          [
-            {% for item in api_response.results %}
-              {% set tenants_in_region = item.content | from_json | json_query(query) | default([]) %}
-              {% if tenants_in_region is defined and tenants_in_region | length > 0 %}
-                {{ tenants_in_region | to_json }}
-                {% if not loop.last %},{% endif %}
-              {% endif %}
-            {% endfor %}
-          ]
+        found_tenants_list: "{{ found_tenants_list + filtered_tenants }}"
       vars:
-        query: "tenants[?contains(crn, '{{ target_service_name }}') && state=='active'].{Name: name, ID: id, Region: '{{ item.item }}', CRN: crn}"
-      run_once: true
+        filtered_tenants: "{{ item.content | from_json | json_query(query) | default([]) }}"
+        query: "tenants[?contains(crn, '{{ target_service_name }}') && contains(crn, '{{ item.item }}') && state=='active'].{Name: name, ID: id, Region: '{{ item.item }}', CRN: crn}"
+      loop: "{{ api_response.results }}"
+      loop_control:
+        loop_var: item
+      when: item.status == 200 and (item.content | from_json).tenants is defined
 
     - name: Fail if any tenants were found
       ansible.builtin.fail:
-        msg: |
-          Active log routing tenants were found in the following regions:
-          {{ all_found_tenants | to_nice_json }}
-      when: all_found_tenants | length > 2 # Check for an empty JSON list
-      
-    - name: Inform if no tenants were found
+        msg: "Active log routing tenants were found: {{ found_tenants_list | to_nice_json }}"
+      when: found_tenants_list | length > 0
+
+    - name: Inform that no tenants were found
       ansible.builtin.debug:
         msg: "No active log routing tenants were found in any specified region. The check passed successfully."
-      when: all_found_tenants | length <= 2
+      when: found_tenants_list | length == 0
 
     - name: Log out of IBM Cloud
       ansible.builtin.shell: |
