--- a/playbook.yaml
+++ b/playbook.yaml
@@ -41,18 +41,14 @@
             
         - name: Parse regions from environment variable
           set_fact:
-            regions_list: "{{ ('[' + logs_routing_tenant_regions | replace('[', '') | replace(']', '') | replace('\"', '') + ']') | from_yaml }}"
-    
-        - name: Initialize failed regions list
-          set_fact:
-            failed_regions: []
-    
+            regions_list: "{{ logs_routing_tenant_regions | from_yaml }}"
+        
         - name: Loop through each region and find log routing tenants
           ansible.builtin.uri:
             url: "https://management.{{ item }}.logs-router.cloud.ibm.com/v1/tenants"
             method: GET
             headers:
-              Authorization: "{{ iam_token_result }}"
+              Authorization: "{{ iam_token_result.stdout }}"
               IBM-API-Version: 2025-08-06
             return_content: true
             validate_certs: true
@@ -61,17 +57,6 @@
           loop_control:
             loop_var: item
           ignore_errors: true
-    
-        - name: Aggregate regions where tenant API call failed
-          set_fact:
-            failed_regions: "{{ failed_regions + [item.item] }}"
-          when: item.failed or (item.status is defined and item.status != 200)
-          loop: "{{ api_response.results }}"
-
-        - name: Report failed regions if any API calls failed
-          ansible.builtin.debug:
-            msg: "The following regions failed during the tenant lookup: {{ failed_regions }}"
-          when: failed_regions | length > 0
 
         - name: Consolidate and filter all found tenants into a single list
           set_fact:
